--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RESTful API for interaction with MongoDB and PostgreSQL",
   "main": "main.js",
   "scripts": {
-    "test": "test"
+    "conv": "hjson -j config.hjson > config.json"
   },
   "keywords": [
     "API",
@@ -16,7 +16,17 @@
   "author": "Younes Henni",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "hjson": "^3.1.2",
+    "pg": "^7.7.1",
+    "prompt-password": "^1.2.0",
     "sequelize": "^4.42.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "eslint": "^5.11.0",
+    "eslint-config-google": "^0.11.0",
+    "grunt": "^1.0.3"
   }
 }
