--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.1",
   "description": "RESTful API for interaction with MongoDB and PostgreSQL",
   "main": "main.js",
-  "scripts": {
-    "conv": "hjson -j config.hjson > config.json"
-  },
+  "scripts": {},
   "keywords": [
     "API",
     "REST",
@@ -16,6 +14,7 @@
   "author": "Younes Henni",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "hjson": "^3.1.2",
