--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "hjson": "^3.1.2",
+    "mongoose": "^5.4.0",
     "pg": "^7.7.1",
     "prompt-password": "^1.2.0",
     "sequelize": "^4.42.0"
