--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "RESTful API for interaction with MongoDB and PostgreSQL",
   "main": "main.js",
-  "scripts": {},
+  "scripts": {
+    "conv": "hjson -j config.hjson > config.json"
+  },
   "keywords": [
     "API",
     "REST",
