--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
   ],
   "author": "Younes Henni",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/younabobo/REST-API.git"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-jwt-middleware": "^1.0.3",
     "hjson": "^3.1.2",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
     "pg": "^7.7.1",
     "prompt-password": "^1.2.0",
