--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "mongoose": "^5.4.0",
     "pg": "^7.7.1",
     "prompt-password": "^1.2.0",
-    "sequelize": "^4.42.0"
+    "sequelize": ">5.3.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
